
[package]
name = "fx-corr"
version = "1.0.0"
edition = "2021"
description = "FX correlator toolkit (ACF/XCF/Phased/Corr)"
authors = ["Masanori AKIMOTO"]
repository = "https://github.com/M-AKIMOTOO/phased_array/tree/main"
license = "MIT"
readme = "README.md"
autobins = false

[[bin]]
name = "yi-acf"
path = "src/main.rs"

[[bin]]
name = "yi-xcf"
path = "src/main.rs"

[[bin]]
name = "yi-phasedarray"
path = "src/main.rs"

[[bin]]
name = "yi-corr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
num-complex = "0.4.6"
rustfft = "6.4.0"
plotters = "0.3.7"
libc = "0.2.175"
rayon = "1.11.0"
astro = "2.0.0"
nav-types = "0.5.2"
ndarray = "0.15.6"
realfft = "3.5.0"
roxmltree = "0.20.0"
erfa = "0.2.1"
core_affinity = "0.8.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
